--- a/src/templates/model.ts.ejs
+++ b/src/templates/model.ts.ejs
@@ -1,3 +1,30 @@
-module.exports = {
-  name: '<%= props.name %>'
+export interface <%= name %>Model {
+  id: number;
+  name: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
+
+export class <%= name %>Service {
+  private models: <%= name %>Model[] = [];
+
+  create(name: string): <%= name %>Model {
+    const model: <%= name %>Model = {
+      id: Date.now(),
+      name,
+      createdAt: new Date(),
+      updatedAt: new Date(),
+    };
+    
+    this.models.push(model);
+    return model;
+  }
+
+  findAll(): <%= name %>Model[] {
+    return this.models;
+  }
+
+  findById(id: number): <%= name %>Model | undefined {
+    return this.models.find(model => model.id === id);
+  }
 }
